# wbar

./: AUTHORS  ChangeLog  README  THANKS  autogen.sh  configure.ac
po/: LINGUAS  Makevars  POTFILES.in  de.po  es.po  fi.po  ja.po  ru.po  zh_TW.po
share/: Makefile.am  wbar.ui
src/config/: Functions.cc
src/core/: Icon.cc  Main.cc  XWin.cc
